# clawdex-mobile

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  STATUS.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  npm-release.yml  pages.yml
apps/mobile/: .env.example  .eslintrc.cjs  App.tsx  app.json  eas.json  index.js  package.json  tsconfig.json
apps/telegram-miniapp/: .env.example  README.md  eslint.config.cjs  index.html  package.json  tsconfig.json  vite.config.ts
docs/: app-review-notes.md  browser-preview-limitations.md  codex-app-server-cli-gap-tracker.md  eas-builds.md  opencode-integration-architecture.md  privacy-policy.md  push-notifications.md  realtime-streaming-limitations.md  setup-and-operations.md  t3code-integration-architecture.md  terms-of-service.md  troubleshooting.md  voice-transcription.md
docs/release-notes/: 5.1.2.md  5.2.3.md
scripts/: bridge-binary.js  bridge-self-update.js  codespaces-bootstrap.js  setup-secure-dev.sh  setup-wizard.sh  start-bridge-secure.js  start-bridge-secure.sh  start-expo.sh  start-mobile-stack.sh  stop-services.sh  sync-versions.js  teardown.sh
services/rust-bridge/: .env.example  Cargo.toml  package.json
services/rust-bridge/src/: main.rs
services/rust-bridge/src/services/: git.rs  mod.rs  terminal.rs  update.rs
site/: index.html  styles.css
web_app/: README.md  package.json
(+160 files in other folders)
