[package]
name = "codex-rust-bridge"
version = "1.3.2"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "http1", "tokio"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
qr2term = "0.3"
tokio = { version = "1", features = ["full"] }
